@@ -1,5 +1,6 @@
 CHANGES IN VERSION 2.7.11
 ------------------------
+ o check whether input geneList is sorted <2015-09-22, Tue>
  o bug fixed in EXTID2NAME, keytype is TAIR for arabidopsis and ORF for malaria <2015-08-26, Wed>
  
 CHANGES IN VERSION 2.7.10
